# src/app/api/index.ts
@@ -1,7 +1,6 @@
 const router = require("express").Router();
 
 require("./user")(router);
-require("./category")(router);
 require("./article")(router);
 require("./comment")(router);
 require("./like")(router);
