# src/app/common/utils/swagger.json
@@ -133,37 +133,6 @@
                 ]
             }
         },
-
-        "/api/categories": {
-            "post": {
-                "tags": ["Categories"],
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "responses": {},
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Categories"
-                            }
-                        },
-                        "application/xml": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Categories"
-                            }
-                        },
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Categories"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/articles": {
             "post": {
                 "tags": ["Articles"],
@@ -213,6 +182,17 @@
                         "schema": {
                             "type": "string",
                             "enum": ["tranding", "new", "technology"]
+                        }
+                    },
+                    {
+                        "name": "category",
+                        "in": "query",
+                        "description": "add category query string for search",
+                        "required": false,
+                        "explode": true,
+                        "schema": {
+                            "type": "string",
+                            "enum": ["category1", "category2", "category3"]
                         }
                     }
                 ]
@@ -335,16 +315,6 @@
                     }
                 }
             },
-            "Categories": {
-                "type": "object",
-                "properties": {
-                    "name": {
-                        "type": "string",
-                        "required": true,
-                        "example": "food"
-                    }
-                }
-            },
             "Articles": {
                 "type": "object",
                 "properties": {
@@ -364,10 +334,11 @@
                         "enum": ["tranding", "new", "technology"],
                         "example": "tranding"
                     },
-                    "categoryId": {
+                    "category": {
                         "type": "string",
                         "required": true,
-                        "example": "643f5638c98880b65f379d23"
+                        "enum": ["category1", "category2", "category3"],
+                        "example": "category1"
                     },
                     "userId": {
                         "type": "string",
